Fix move/resize problems when going too fast
Cover the iframe with an invisible div, so that mouse events don't get
sent to and swallowed by the iframe instead.

--- a/public/stylesheets/sass/app.sass
+++ b/public/stylesheets/sass/app.sass
@@ -1263,6 +1263,14 @@ iframe.interactive
   width: 690px
   height: 400px
 
+#labbook-cover
+  position: absolute
+  top: 0
+  left: 0
+  right: 0
+  bottom: 0
+  display: none
+
 #labbook-outer
   position: fixed !important
   width: auto
